--- a/Kaggle,DACON Session 2/Dacon_ByeongchanKim.ipynb
+++ b/Kaggle,DACON Session 2/Dacon_ByeongchanKim.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 호영's code\n",
+    "# my code\n",
     "\n",
     "index_good = train_y[train_y['state'] == 'good'].index\n",
     "index_bad = [i for i in list(np.arange(len(train_labels))) if i not in list(index_good)]\n",
